Java advance MOOC of multithread