@@ -14,10 +14,15 @@ public class Main {
         ResourceBundle bundle = ResourceBundle.getBundle("msg", mylocale);
         String hello = bundle.getString("hello");
         System.out.println(hello);
-        mylocale = new Locale("zh", "CN");
+        mylocale = Locale.of("zh", "CN");
         bundle = ResourceBundle.getBundle("msg", mylocale);
         /*
-         * The order of resource file lookup is as follows: msg_zh_CN.properties(one which is the parameter of Locale) msg_zh.properties msg_en_US.properties(default) msg_en.properties msg.properties
+         * The order of resource file lookup is as follows:
+         * msg_zh_CN.properties(one which is the parameter of Locale)
+         * msg_zh.properties
+         * msg_en_US.properties(default)
+         * msg_en.properties
+         * msg.properties
          */
         hello = bundle.getString("hello");
         System.out.println(hello);
